# HeadHunterDB

./: .gitignore  main.py  pyproject.toml
src/: DBManager.py  create_database.py  main.py  uploading_vacancies.py
src/api/: api_config.py  hh_api.py
src/config/: config.py  database.ini
